Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5041

QGLWidget::renderText with depth testing on

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.1
    • 4.5.3
    • GUI: OpenGL
    • None
    • 7371d787d9b2667132c0caadb9964189b1d8c9fc

    Description

      Platform
      Windows Vista
      Platform details
      Vista Home Premium x64, SP2
      Compilers
      MSVC
      Compiler details
      Microsoft Visual Studio 2005, SP2
      Subject
      QGLWidget::renderText with depth testing on
      Steps to reproduce / test case
      Setting depth testing on when calling QGLWidget::renderText (handy with the full location in space version) causes artifacts to appear in the rendered font. The artifacts appear as repeated diagonal lines through the font text.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rweather Rhys Weatherley (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes