Disable depth testing during the 2D QGLWidget::renderText()

Also document the depth testing conditions for the 2D and 3D
versions of the function.

Task-number: QTBUG-5041
Reviewed-by: Daniel Pope